# communis-agent

./: .env.example  .gitignore  CLAUDE.md  COMPOSABILITY.md  PROMPTS.md  README.md  pyproject.toml  pyrightconfig.json
activities/: llm_activities.py  session_activities.py  tool_activities.py  workspace_activities.py
cli/: main.py  session_cli.py
docs/: process-diagram-b9e8516e.md  yml_input_example.yml
examples/: api_server.py  external_client.py  parallel_analysis.py  research_pipeline.py
models/: data_types.py  session_types.py
prompts/: communis_prompts.py  riff_prompts.py  session_prompts.py
scripts/: run_worker.py
shared/: constants.py  frontmatter.py
tests/: test_activities.py  test_gemini_conversion.py  test_integration_gemini.py  test_integration_lmstudio.py  test_integration_session.py  test_models.py  test_run_tool.py  test_session_activities.py  test_session_types.py  test_session_workflow.py  test_task_workflow.py  test_workflows.py  test_workspace.py
tests/full_integration/: conftest.py  test_user_journeys.py
tests/full_integration/configs/: goal_detect_essay.yaml  multi_turn_research.yaml  quick_sanity.yaml  subcommunis_parallel.yaml  tool_use_filesystem.yaml
tools/: delegate_tool.py  run_tool.py
workflows/: communis_orchestrator.py  communis_turn.py  constants.py  riff_orchestrator.py  riff_turn.py  session_workflow.py  task_workflow.py
